# serializer version: 1
# name: test_sensors[image.testaccount1_app_icon-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.testaccount1_app_icon',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'App icon',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'App icon',
    'platform': 'steam_online',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <SteamImage.APP_ICON: 'app_icon'>,
    'unique_id': '12345678901234567_app_icon',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[image.testaccount1_app_icon-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ImageEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '520',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/image_proxy/image.testaccount1_app_icon?token=520',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'testaccount1 App icon',
    }),
    'context': <ANY>,
    'entity_id': 'image.testaccount1_app_icon',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2013-12-13T12:13:12+00:00',
  })
# ---
# name: test_sensors[image.testaccount1_avatar-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.testaccount1_avatar',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Avatar',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Avatar',
    'platform': 'steam_online',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <SteamImage.AVATAR: 'avatar'>,
    'unique_id': '12345678901234567_avatar',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[image.testaccount1_avatar-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ImageEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '520',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/image_proxy/image.testaccount1_avatar?token=520',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'testaccount1 Avatar',
    }),
    'context': <ANY>,
    'entity_id': 'image.testaccount1_avatar',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2013-12-13T12:13:12+00:00',
  })
# ---
# name: test_sensors[image.testaccount1_header_capsule-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.testaccount1_header_capsule',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Header capsule',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Header capsule',
    'platform': 'steam_online',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <SteamImage.HEADER_CAPSULE: 'header_capsule'>,
    'unique_id': '12345678901234567_header_capsule',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[image.testaccount1_header_capsule-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ImageEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '520',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/image_proxy/image.testaccount1_header_capsule?token=520',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'testaccount1 Header capsule',
    }),
    'context': <ANY>,
    'entity_id': 'image.testaccount1_header_capsule',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2013-12-13T12:13:12+00:00',
  })
# ---
# name: test_sensors[image.testaccount1_library_capsule-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.testaccount1_library_capsule',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Library capsule',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Library capsule',
    'platform': 'steam_online',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <SteamImage.LIBRARY_CAPSULE: 'library_capsule'>,
    'unique_id': '12345678901234567_library_capsule',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[image.testaccount1_library_capsule-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ImageEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '520',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/image_proxy/image.testaccount1_library_capsule?token=520',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'testaccount1 Library capsule',
    }),
    'context': <ANY>,
    'entity_id': 'image.testaccount1_library_capsule',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2013-12-13T12:13:12+00:00',
  })
# ---
# name: test_sensors[image.testaccount1_library_hero_capsule-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.testaccount1_library_hero_capsule',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Library hero capsule',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Library hero capsule',
    'platform': 'steam_online',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <SteamImage.LIBRARY_HERO: 'library_hero'>,
    'unique_id': '12345678901234567_library_hero',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[image.testaccount1_library_hero_capsule-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ImageEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '520',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/image_proxy/image.testaccount1_library_hero_capsule?token=520',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'testaccount1 Library hero capsule',
    }),
    'context': <ANY>,
    'entity_id': 'image.testaccount1_library_hero_capsule',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2013-12-13T12:13:12+00:00',
  })
# ---
# name: test_sensors[image.testaccount1_library_logo-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.testaccount1_library_logo',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Library logo',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Library logo',
    'platform': 'steam_online',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <SteamImage.LIBRARY_LOGO: 'library_logo'>,
    'unique_id': '12345678901234567_library_logo',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[image.testaccount1_library_logo-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ImageEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '520',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/image_proxy/image.testaccount1_library_logo?token=520',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'testaccount1 Library logo',
    }),
    'context': <ANY>,
    'entity_id': 'image.testaccount1_library_logo',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2013-12-13T12:13:12+00:00',
  })
# ---
# name: test_sensors[image.testaccount1_main_capsule-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.testaccount1_main_capsule',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Main capsule',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Main capsule',
    'platform': 'steam_online',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <SteamImage.MAIN_CAPSULE: 'main_capsule'>,
    'unique_id': '12345678901234567_main_capsule',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[image.testaccount1_main_capsule-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ImageEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '520',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/image_proxy/image.testaccount1_main_capsule?token=520',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'testaccount1 Main capsule',
    }),
    'context': <ANY>,
    'entity_id': 'image.testaccount1_main_capsule',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2013-12-13T12:13:12+00:00',
  })
# ---
# name: test_sensors[image.testaccount1_page_background-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.testaccount1_page_background',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Page background',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Page background',
    'platform': 'steam_online',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <SteamImage.PAGE_BACKGROUND: 'page_background'>,
    'unique_id': '12345678901234567_page_background',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[image.testaccount1_page_background-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ImageEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '520',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/image_proxy/image.testaccount1_page_background?token=520',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'testaccount1 Page background',
    }),
    'context': <ANY>,
    'entity_id': 'image.testaccount1_page_background',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2013-12-13T12:13:12+00:00',
  })
# ---
# name: test_sensors[image.testaccount1_small_capsule-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.testaccount1_small_capsule',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Small capsule',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Small capsule',
    'platform': 'steam_online',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <SteamImage.SMALL_CAPSULE: 'small_capsule'>,
    'unique_id': '12345678901234567_small_capsule',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[image.testaccount1_small_capsule-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ImageEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '520',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/image_proxy/image.testaccount1_small_capsule?token=520',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'testaccount1 Small capsule',
    }),
    'context': <ANY>,
    'entity_id': 'image.testaccount1_small_capsule',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2013-12-13T12:13:12+00:00',
  })
# ---
# name: test_sensors[image.testaccount1_vertical_capsule-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.testaccount1_vertical_capsule',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Vertical capsule',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Vertical capsule',
    'platform': 'steam_online',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <SteamImage.VERTICAL_CAPSULE: 'vertical_capsule'>,
    'unique_id': '12345678901234567_vertical_capsule',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[image.testaccount1_vertical_capsule-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ImageEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '520',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/image_proxy/image.testaccount1_vertical_capsule?token=520',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'testaccount1 Vertical capsule',
    }),
    'context': <ANY>,
    'entity_id': 'image.testaccount1_vertical_capsule',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2013-12-13T12:13:12+00:00',
  })
# ---
# name: test_sensors[image.testaccount2_app_icon-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.testaccount2_app_icon',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'App icon',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'App icon',
    'platform': 'steam_online',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <SteamImage.APP_ICON: 'app_icon'>,
    'unique_id': '12345678912345678_app_icon',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[image.testaccount2_app_icon-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/image_proxy/image.testaccount2_app_icon?token=520',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'testaccount2 App icon',
    }),
    'context': <ANY>,
    'entity_id': 'image.testaccount2_app_icon',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[image.testaccount2_avatar-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.testaccount2_avatar',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Avatar',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Avatar',
    'platform': 'steam_online',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <SteamImage.AVATAR: 'avatar'>,
    'unique_id': '12345678912345678_avatar',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[image.testaccount2_avatar-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ImageEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '520',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/image_proxy/image.testaccount2_avatar?token=520',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'testaccount2 Avatar',
    }),
    'context': <ANY>,
    'entity_id': 'image.testaccount2_avatar',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2013-12-13T12:13:12+00:00',
  })
# ---
# name: test_sensors[image.testaccount2_header_capsule-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.testaccount2_header_capsule',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Header capsule',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Header capsule',
    'platform': 'steam_online',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <SteamImage.HEADER_CAPSULE: 'header_capsule'>,
    'unique_id': '12345678912345678_header_capsule',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[image.testaccount2_header_capsule-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/image_proxy/image.testaccount2_header_capsule?token=520',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'testaccount2 Header capsule',
    }),
    'context': <ANY>,
    'entity_id': 'image.testaccount2_header_capsule',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[image.testaccount2_library_capsule-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.testaccount2_library_capsule',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Library capsule',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Library capsule',
    'platform': 'steam_online',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <SteamImage.LIBRARY_CAPSULE: 'library_capsule'>,
    'unique_id': '12345678912345678_library_capsule',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[image.testaccount2_library_capsule-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/image_proxy/image.testaccount2_library_capsule?token=520',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'testaccount2 Library capsule',
    }),
    'context': <ANY>,
    'entity_id': 'image.testaccount2_library_capsule',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[image.testaccount2_library_hero_capsule-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.testaccount2_library_hero_capsule',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Library hero capsule',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Library hero capsule',
    'platform': 'steam_online',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <SteamImage.LIBRARY_HERO: 'library_hero'>,
    'unique_id': '12345678912345678_library_hero',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[image.testaccount2_library_hero_capsule-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/image_proxy/image.testaccount2_library_hero_capsule?token=520',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'testaccount2 Library hero capsule',
    }),
    'context': <ANY>,
    'entity_id': 'image.testaccount2_library_hero_capsule',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[image.testaccount2_library_logo-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.testaccount2_library_logo',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Library logo',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Library logo',
    'platform': 'steam_online',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <SteamImage.LIBRARY_LOGO: 'library_logo'>,
    'unique_id': '12345678912345678_library_logo',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[image.testaccount2_library_logo-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/image_proxy/image.testaccount2_library_logo?token=520',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'testaccount2 Library logo',
    }),
    'context': <ANY>,
    'entity_id': 'image.testaccount2_library_logo',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[image.testaccount2_main_capsule-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.testaccount2_main_capsule',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Main capsule',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Main capsule',
    'platform': 'steam_online',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <SteamImage.MAIN_CAPSULE: 'main_capsule'>,
    'unique_id': '12345678912345678_main_capsule',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[image.testaccount2_main_capsule-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/image_proxy/image.testaccount2_main_capsule?token=520',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'testaccount2 Main capsule',
    }),
    'context': <ANY>,
    'entity_id': 'image.testaccount2_main_capsule',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[image.testaccount2_page_background-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.testaccount2_page_background',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Page background',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Page background',
    'platform': 'steam_online',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <SteamImage.PAGE_BACKGROUND: 'page_background'>,
    'unique_id': '12345678912345678_page_background',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[image.testaccount2_page_background-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/image_proxy/image.testaccount2_page_background?token=520',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'testaccount2 Page background',
    }),
    'context': <ANY>,
    'entity_id': 'image.testaccount2_page_background',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[image.testaccount2_small_capsule-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.testaccount2_small_capsule',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Small capsule',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Small capsule',
    'platform': 'steam_online',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <SteamImage.SMALL_CAPSULE: 'small_capsule'>,
    'unique_id': '12345678912345678_small_capsule',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[image.testaccount2_small_capsule-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/image_proxy/image.testaccount2_small_capsule?token=520',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'testaccount2 Small capsule',
    }),
    'context': <ANY>,
    'entity_id': 'image.testaccount2_small_capsule',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensors[image.testaccount2_vertical_capsule-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.testaccount2_vertical_capsule',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Vertical capsule',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Vertical capsule',
    'platform': 'steam_online',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <SteamImage.VERTICAL_CAPSULE: 'vertical_capsule'>,
    'unique_id': '12345678912345678_vertical_capsule',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[image.testaccount2_vertical_capsule-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/image_proxy/image.testaccount2_vertical_capsule?token=520',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'testaccount2 Vertical capsule',
    }),
    'context': <ANY>,
    'entity_id': 'image.testaccount2_vertical_capsule',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
